[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-downloader = { git = "https://github.com/Gronner/aoc-downloader" }
cache-macro = "0.4.1"
cached = "0.46.1"
graphrs = "0.7.0"
itertools = "0.12.0"
multimap = "0.9.1"
num = "0.4.1"
once_cell = "1.18.0"
pathfinding = "4.6.0"
rayon = "1.8.0"
regex = "1.10.2"

[profile.dev]
opt-level = 3
